added put and delete routes and rest tests
