# routes/diecasts.js
@@ -1,13 +1,15 @@
 const routes = require('express').Router();
 const diecastsController = require('../controllers/diecasts-controller');
 const path = require('path');
-// const ObjectId = require('mongodb').ObjectId;
 
 // routes.get('/', (req, res) => {
 //    res.sendFile(path.join(__dirname + '/../views/diecasts.html'));
 // });
 
-routes.get('/', diecastsController.getAll);       // Get all diecasts
-routes.post('/', diecastsController.addDiecast);  // Add a diecast
+routes.get('/', diecastsController.getDiecasts);        // Get all diecasts
+routes.get('/:id', diecastsController.getDiecast)       // Get one diecast
+routes.post('/', diecastsController.addDiecast);        // Add a diecast
+routes.put('/:id', diecastsController.editDiecast)      // Edit a diecast
+routes.delete('/:id', diecastsController.deleteDiecast) // Delete a diecast
 
 module.exports = routes;
